# RareCpp

./: .gitignore  CMakeLists.txt  CppRandomAccessReflection.sln  Field Identification.xlsx  JSON.md  LICENSE  ObjectMapper.md  README.md  RareCpp.sln
CppRandomAccessReflection/: CppRandomAccessReflection.vcxproj  CppRandomAccessReflection.vcxproj.filters  Json.h  Main.cpp  Main.h  Reflect.h
CppRandomAccessReflectionLib/: ByteBuffer.h  CppRandomAccessReflectionLib.vcxproj  CppRandomAccessReflectionLib.vcxproj.filters  Json.h  Reflect.h  StringBuffer.h
CppRandomAccessReflectionTest/: AcceleratorsTest.cpp  CMakeLists.txt  ConstexprStrTest.cpp  CppRandomAccessReflectionTest.vcxproj  CppRandomAccessReflectionTest.vcxproj.filters  ExtendedTypeSupportTest.cpp  FieldAggregationsTest.cpp  FieldAggregationsTest.h  FieldAggregationsTest_IOA_IOPA.cpp  FieldAggregationsTest_IO_IOP.cpp  FieldAggregationsTest_IPA_IPPA.cpp  FieldAggregationsTest_IP_IPP.cpp  FieldAggregationsTest_POA_POPA.cpp  FieldAggregationsTest_PO_POP.cpp  FieldAggregationsTest_PPA_PPPA.cpp  FieldAggregationsTest_PP_PPP.cpp  FieldTest.cpp  GenericMacroTest.cpp  JsonDefinition.cpp  JsonInputTest.cpp  JsonInputTest.h  JsonInputTestBuffered.cpp  JsonInputTestUnbuffered.cpp  JsonTest.cpp  JsonTest.h  Lambda Include Guard Unit Test Generator.xlsx  LambdaGuardTest.cpp  LambdaGuardTest.h  LambdaGuardTest_IOA_IOPA.cpp  LambdaGuardTest_IO_IOP.cpp  LambdaGuardTest_IPA_IPPA.cpp  LambdaGuardTest_IP_IPP.cpp  LambdaGuardTest_POA_POPA.cpp  LambdaGuardTest_PO_POP.cpp  LambdaGuardTest_PPP_PPPA.cpp  LambdaGuardTest_PP_PPP.cpp  ReflectMacroTest.cpp  ReflectTest.cpp  ReflectionSupportTest.cpp  StringBufferTest.cpp  (+1 more)
GoogleTestLib/: GoogleTestLib.vcxproj  GoogleTestLib.vcxproj.filters  README.txt
GoogleTestLib/googletest/: CMakeLists.txt
GoogleTestLib/googletest/googletest/include/gtest/: gtest-test-part.h  gtest.h
GoogleTestLib/googletest/googletest/include/gtest/internal/: gtest-port.h
RareCpp/: Adapters.cpp  BinaryTests.h  CMakeLists.txt  Functions.cpp  Main.cpp  Main.h  RareCpp.vcxproj  RareCpp.vcxproj.filters  WorkingAnnotate.h  aggregate_refl_experiement.h  aggregate_refl_experiment.cpp  main.cpp  menu.h  misc_direct_tuplification.cpp
RareCpp/examples/: adaptive_clone_structure.cpp  adaptive_implement_builder.cpp  adaptive_implement_change_listener.cpp  adaptive_implement_mapper.cpp  adaptive_implement_whiteboxer.cpp  adaptive_typedef_structure.cpp  auto_reflect_aggregate.cpp  builder_aggregated.cpp  builder_member_availability.cpp  builder_simple.cpp  builder_validated.cpp  car.h  declare_examples.h  function_argument_and_return_types.cpp  function_build_and_call.cpp  function_define_iterate_call.cpp  functions.cpp  global_reflection.cpp  json_basic.cpp  json_customization.cpp  json_customization.h  json_customizations.cpp  json_unknown_fields.cpp  legacy_annotated_supers.cpp  legacy_basic_reflection.cpp  legacy_functions.cpp  legacy_json_customization.cpp  legacy_json_dynamic.cpp  legacy_object_mapper.cpp  legacy_reflection_limits.cpp  mapper_custom_field_mapping.cpp  mapper_trivial_mapping.cpp  mapper_using_standard_mappings.cpp  member_access_by_constexpr_index.cpp  member_access_by_name.cpp  member_access_by_runtime_index.cpp  member_access_protection_modifier.cpp  member_define_iterate_modify.cpp  member_filter_constexpr_if.cpp  member_filter_predicate.cpp  (+26 more)
RareCpp/experimental/: adaptive.h  refactoring.cpp  rest.cpp  structure_browser.h  tracking.cpp
RareCppLib/: Binary.h  Json.h  RareCppLib.vcxproj  RareCppLib.vcxproj.filters  Reflect.h  StringBuffer.h  library_code_is_in_include_directory.txt
RareCppTest/: CMakeLists.txt  ConstexprStrTest.cpp  ExtendedTypeSupportTest.cpp  FieldTest.cpp  GenericMacroTest.cpp  InheritTest.cpp  JsonDefinition.cpp  JsonInputTest.cpp  JsonInputTest.h  JsonTest.cpp  JsonTest.h  JsonTestRunBuffered.cpp  JsonTestRunUnbuffered.cpp  ObjectMapperTest.cpp  RareCppTest.vcxproj  RareCppTest.vcxproj.filters  ReflectTest.cpp  ReflectionTest.cpp  StringBufferTest.cpp  builder_test.cpp  edit_test.cpp  editor_attach_test.cpp  editor_notifications_test.cpp  extended_type_support_test.cpp  flat_mdspan_test.cpp  generic_macro_test.cpp  inherit_test.cpp  json_input_test.cpp  json_input_test.h  json_input_test_buffered.cpp  json_input_test_unbuffered.cpp  json_test.cpp  json_test.h  json_test_run_buffered.cpp  json_test_run_unbuffered.cpp  member_test.cpp  object_mapper_test.cpp  reflect_aggregate_test.cpp  reflect_private_test.cpp  reflect_test.cpp  (+4 more)
enc_temp_folder/fb1b5a8610be5d4189e12a85703532de/: Main.cpp
include/nf/: README.md  hist.h
include/rarecpp/: editor.h  json.h  reflect.h  string_buffer.h
